--- a/app/views/reports/crunch.html.erb
+++ b/app/views/reports/crunch.html.erb
@@ -1,7 +1,7 @@
 <h1>Hello Crunch</h1>
 
 <table>
-	<h2>High frequency 1-tuples: </h2>
+	<h2>High frequency n-tuples: </h2>
 	<%@metrics.each do |m|%>
 	<%=m%><br>
 	<%end%>
