forms and views for reports

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -11,6 +11,14 @@
     </div>
   <% end %>
 
+  <%= f.label :name %>:
+  <%= f.text_field :name %><br />
+
+  <%= f.label :source_files %>:<br>
+  <%= f.check_box( :source_files, {multiple: true}, 'Search_term_report4.csv' )%>Search_term_report4.csv<br />
+  <%= f.check_box( :source_files, {multiple: true}, 'Search_term_report3.csv' )%>Search_term_report3.csv<br />
+  <%= f.check_box( :source_files, {multiple: true}, 'Search-term-report2.csv' )%>Search-term-report2.csv<br />
+
   <div class="actions">
     <%= f.submit %>
   </div>
