--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,4 +1,6 @@
 <p id="notice"><%= notice %></p>
-
+<h1><%= @report.name %></h1>
+<h3>From files: <%= @report.source_files.join(', ') %></h3>
+<%= link_to 'crunch', crunch_path(@report) %> |
 <%= link_to 'Edit', edit_report_path(@report) %> |
 <%= link_to 'Back', reports_path %>
