--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -6,7 +6,8 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>From files</th>
+      <th>Data Set</th>
+      <th>Crunch Algorithm</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +16,8 @@
     <% @reports.each do |report| %>
       <tr>
         <td><%= report.name %></td>
-        <td><%= report.source_files.join(', ') if report.source_files%></td>
+        <td><%= report.data_set.name%></td>
+        <td><%= report.crunch_algorithm.name if report.crunch_algorithm%></td>
         <td><%= link_to 'Show', report %></td>
         <td><%= link_to 'Edit', edit_report_path(report) %></td>
         <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
