--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 <h1><%= @report.name %></h1>
-<h3>From files: <%=  @report.source_files ? @report.source_files.join(', ') : "none"%></h3>
+<h3>Data set: <%= @report.data_set.name %> | From files: <%=  @report.data_set.source_files ? @report.data_set.source_files.join(', ') : "none"%></h3>
+<h3>Crunch Algorithm: <i><%= @report.crunch_algorithm ? @report.crunch_algorithm.name : "none"%></i></h3>
 <%= link_to 'crunch', crunch_path(@report) %> |
 <%= link_to 'Edit', edit_report_path(@report) %> |
 <%= link_to 'Back', reports_path %>
