--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
 
 </head>
 <body>
+
   <div style="max-width:900px; margin-left:auto; margin-right: auto">
+    <%= render partial: "navbar", layout: "navbar"%>
     <%= yield %>
   </div>
 
