--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -3,6 +3,29 @@
 <h4><b>Data set:</b> <%= @report.data_set.name %><br>
 <b>From files:</b> <%=  @report.data_set.source_files ? @report.data_set.source_files.join(', ') : "none"%></h4>
 <h4><b>Crunch Algorithm</b>: <i><%= @report.crunch_algorithm ? @report.crunch_algorithm.name : "none"%></i></h4>
+<h2>Report Preview</h2>
+(cached from last crunch) <br><br>
+
+<table class="table table-striped">
+	<tr>
+	<% if @report.report_preview_rows%>
+		<% @report.report_preview_rows[0].each do |k,v| %>
+			<th><%=k.to_s%></th>
+		<%end%>
+		</tr>
+		<% @report.report_preview_rows.each do |row| %>
+			<tr>
+				<% row.each do |k, v|%>
+					<td><%=v.to_s%></td>
+				<%end%>
+			</tr>
+		<%end%>
+	<% else %>
+		<h2>No Data Cached</h2>
+			<%= link_to "Crunch the data", crunch_path %>
+	<% end %>
+</table>
+
 <%= link_to 'crunch', crunch_path(@report) %> |
 <%= link_to 'Edit', edit_report_path(@report) %> |
 <%= link_to 'Back', reports_path %>
