--- a/app/views/reports/crunch.html.erb
+++ b/app/views/reports/crunch.html.erb
@@ -4,12 +4,12 @@
 
 <table class="table table-striped">
 	<tr>
-	<% if @report.data%>
-		<% @report.data.headers.each do |header| %>
-			<th><%=header.to_s%></th>
+	<% if @report.report_preview_rows	%>
+		<% @report.report_preview_rows[0].each do |k,v| %>
+			<th><%=k.to_s%></th>
 		<%end%>
 		</tr>
-		<% @report.data.each do |row| %>
+		<% @report.report_preview_rows.each do |row| %>
 			<tr>
 				<% row.each do |k, v|%>
 					<td><%=v.to_s%></td>
@@ -18,6 +18,6 @@
 		<%end%>
 	<% else %>
 		<h2>No Data Loaded</h2>
-			<%= link_to "Choose source files", edit_path %>
+			<%= link_to "Choose source files", edit_report_path %>
 	<% end %>
 </table>
