--- a/app/views/crunch_algorithms/_form.html.erb
+++ b/app/views/crunch_algorithms/_form.html.erb
@@ -15,14 +15,51 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
-  <div class="field">
-    <%= f.label :functions %><br>
-    <%= f.text_field :functions %>
-  </div>
+
   <div class="field">
     <%= f.label :category %><br>
     <%= f.text_field :category %>
   </div>
+
+  <div class="field">
+    <%= f.label :column_mappings %><br>
+    <div style="margin-left:1em">
+    <% @crunch_algorithm.column_mappings.each do |k,v| %>
+      <%= k.to_s%> => <%=v.to_s%> <br>
+    <% end %>
+  </div>
+  </div>
+
+  <div class="field">
+    <%= f.label :functions %><br>
+      <% (0..6).each do |n| %>
+      <div style="margin-left:1em; padding-bottom: 20px">
+        <%=n%>) <select name="functions[<%=n%>][name]">
+          <% unless @crunch_algorithm.functions[n] %> '<option value="" selected="selected">Please select</option>' <% end %> 
+          
+
+          <% @allowed_functions.each do |af| %>
+            
+            <option value="<%=af[:name]%>" 
+              <% if @crunch_algorithm.functions[n] && @crunch_algorithm.functions[n][:name].to_s == af[:name] %>
+                selected="selected"
+              <% end %> 
+            ><%=af[:name]%></option>
+          <% end %>
+
+
+        </select> 
+        <input size="90" id="functions_<%=n%>_args" name="functions[<%=n%>][args]" type="text" 
+        <% if @crunch_algorithm.functions[n] %>
+          value="<%=@crunch_algorithm.functions[n][:args]%>"
+        <% end %>
+        />
+        <br>
+      </div>
+
+      <% end %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
