--- a/app/views/data_sets/append_source_files.html.erb
+++ b/app/views/data_sets/append_source_files.html.erb
@@ -1,3 +1,7 @@
+<h1>Attatch Source Files to Data Set</h1>
+
+<h3>Append to  <%= @data_set.name %></h3>
+
 <%= form_for(@data_set) do |f| %>
   <% if @data_set.errors.any? %>
     <div id="error_explanation">
@@ -10,18 +14,14 @@
       </ul>
     </div>
   <% end %>
-
   <%= f.label :name %><br>
-  <%= f.text_field :name %><br> <br>
+  <%= f.text_field :name %><br>
+  <%= f.label :source_file %>:<br>
 
 
-
-  <%= f.label :source_files %>:<br>
-  <%= f.file_field :source_files, multiple: true %>
+  
 
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
-
-
