--- a/app/views/data_sets/show.html.erb
+++ b/app/views/data_sets/show.html.erb
@@ -6,8 +6,10 @@
 </p>
 
 <p>
-  <strong>Source files:</strong>
-	<%=  @data_set.source_files ? @data_set.source_files.join(', ') : "none"%>
+  <strong>Source files:</strong> <br>
+  <% @data_set.source_files.each do |sf| %> <br>
+    <%= sf.name %>
+  <% end %>
 </p>
 
 <%= link_to 'Edit', edit_data_set_path(@data_set) %> |
