--- a/app/views/source_files/show.html.erb
+++ b/app/views/source_files/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>URL:</strong>
+  <%= @source_file.remote_path %>
+</p>
+
+<p>
   <strong>Data Set:</strong>
     <%= @source_file.data_set.name %>
 </p>
