--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -17,6 +17,7 @@
         <li <%= 'class=active' if params[:controller] == 'reports'%>><a href="/reports">Reports <span class="sr-only">(current)</span></a></li>
         <li <%= 'class=active' if params[:controller] == 'data_sets'%>><a href="/data_sets">Data Sets</a></li>
         <li <%= 'class=active' if params[:controller] == 'crunch_algorithms'%>><a href="/crunch_algorithms">Crunch Algorithms</a></li>
+        <li <%= 'class=active' if params[:controller] == 'source_files'%>><a href="/source_files">Data Sources</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
