--- a/app/views/source_files/_form.html.erb
+++ b/app/views/source_files/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@source_file) do |f| %>
+<%= form_for(@source_file, html: { class: "directUpload" }) do |f| %>
   <% if @source_file.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@source_file.errors.count, "error") %> prohibited this source_file from being saved:</h2>
@@ -10,16 +10,16 @@
       </ul>
     </div>
   <% end %>
-
-  <h2>Chose a file:</h2>
-  <div class="field">
-    <%= f.label :remote_source_files %><br>
-    <%= f.file_field :name %>
-  </div>
-
-  <%= f.label :data_set %>:
+<br>
+  <%= f.label :data_set %>: <br>
   <%= select("source_file", "data_set_id", DataSet.all.collect {|ds| [ ds.name, ds.id ] }, { :include_blank => false })
-%> <br><br>
+%> 
+<br>
+<br>
+  <div class="field">
+    <%= f.label :upload_a_file %><br>
+    <%= f.file_field :temp %>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
