--- a/app/views/source_files/index.html.erb
+++ b/app/views/source_files/index.html.erb
@@ -1,20 +1,24 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Source Files</h1>
+<h1>Data Source Files</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
+      <th>Data Set</th>
+      <th>Name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @source_files.each do |source_file| %>
-      <tr>
-        <td><%= link_to 'Show', source_file %></td>
-        <td><%= link_to 'Edit', edit_source_file_path(source_file) %></td>
-        <td><%= link_to 'Destroy', source_file, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <tr>
+      <td><%= source_file.data_set.name %></td>
+      <td><%= source_file.name %></td>
+      <td><%= link_to 'Show', source_file %></td>
+      <td><%= link_to 'Edit', edit_source_file_path(source_file) %></td>
+      <td><%= link_to 'Destroy', source_file, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
