display source files cleanly on data set pages

--- a/app/views/data_sets/_form.html.erb
+++ b/app/views/data_sets/_form.html.erb
@@ -14,14 +14,21 @@
   <%= f.label :name %><br>
   <%= f.text_field :name %><br>
 
+  
+  <% unless @data_set.source_files.empty? %>
+    <br>
+    <%= f.label :existing_source_files %> <br>
+    <% @data_set.source_files.each_with_index do |sf, i| %>
+      <%= i+1 %>) <%= sf.name %></br>
+    <%end%>
+    <br>
+  <%end%>
+
   <div class="field">
-    <%= f.label :remote_source_files %><br>
+    <%= f.label :add_a_source_file %><br>
     <%= f.file_field :remote_source_files %>
   </div>
-
-  <%= f.label :source_files %>:<br>
-
-
+  <br>
   
 
   <div class="actions">
