--- a/app/views/source_files/index.html.erb
+++ b/app/views/source_files/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Data Set</th>
       <th>Name</th>
+      <th>Date Uploaded</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,9 +17,10 @@
     <tr>
       <td><%= source_file.data_set.name %></td>
       <td><%= source_file.name %></td>
-      <td><%= link_to 'Show', source_file %></td>
+      <td><%= source_file.created_at.strftime("%m/%d/%Y") %></td>
+      <td><%= link_to 'View', source_file %></td>
       <td><%= link_to 'Edit', edit_source_file_path(source_file) %></td>
-      <td><%= link_to 'Destroy', source_file, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%= link_to 'Delete', source_file, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
