use sensible action names in indeces

--- a/app/views/crunch_algorithms/index.html.erb
+++ b/app/views/crunch_algorithms/index.html.erb
@@ -21,9 +21,9 @@
           <% end %>
         </td>
         <td><%= crunch_algorithm.category %></td>
-        <td><%= link_to 'Show', crunch_algorithm %></td>
+        <td><%= link_to 'View', crunch_algorithm %></td>
         <td><%= link_to 'Edit', edit_crunch_algorithm_path(crunch_algorithm) %></td>
-        <td><%= link_to 'Destroy', crunch_algorithm, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', crunch_algorithm, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
