actions on all pages are sensible names

--- a/app/views/crunch_algorithms/edit.html.erb
+++ b/app/views/crunch_algorithms/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @crunch_algorithm %> |
-<%= link_to 'Back', crunch_algorithms_path %>
+<%= link_to 'View Algorithm', @crunch_algorithm %> |
+<%= link_to 'Crunch Algorithms Index', crunch_algorithms_path %>
