--- a/app/views/data_sets/edit.html.erb
+++ b/app/views/data_sets/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @data_set %> |
-<%= link_to 'Back', data_sets_path %>
+<%= link_to 'View Data Set', @data_set %> |
+<%= link_to 'Data Sets Index', data_sets_path %>
