--- a/app/views/reports/edit.html.erb
+++ b/app/views/reports/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Report</h1>
+<h1>Editing Settings</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @report %> |
-<%= link_to 'Back', reports_path %>
+<%= link_to 'View Report', @report %> |
+<%= link_to 'Report Index', reports_path %>
