--- a/app/views/source_files/edit.html.erb
+++ b/app/views/source_files/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @source_file %> |
-<%= link_to 'Back', source_files_path %>
+<%= link_to 'View Source File', @source_file %> |
+<%= link_to 'Source Files Index', source_files_path %>
