--- a/app/views/data_sets/_form.html.erb
+++ b/app/views/data_sets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@data_set, html: { class: "directUpload" }) do |f| %>
+<%= form_for(@data_set) do |f| %>
   <% if @data_set.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@data_set.errors.count, "error") %> prohibited this data_set from being saved:</h2>
@@ -14,15 +14,9 @@
   <%= f.label :name %><br>
   <%= f.text_field :name %><br>
 
-  
-  <% unless @data_set.source_files.empty? %>
-    <br>
-    <%= f.label :source_files %> <br>
-    <% @data_set.source_files.each_with_index do |sf, i| %>
-      <%= i+1 %>) <%= sf.name %></br>
-    <%end%>
-    <br>
-  <%end%>
+  <%= f.label :data_file %><br>
+  <%= f.file_field :file %>
+
 
   <div class="actions">
     <%= f.submit %>
