--- a/app/views/crunch_algorithms/edit_functions.html.erb
+++ b/app/views/crunch_algorithms/edit_functions.html.erb
@@ -17,7 +17,7 @@
 
   <h4>Functions</h4>
 
-  <div id="functions" class="field">
+  <div id="functions" class="field" data-crunch-alg-id=<%=@crunch_algorithm.id%>>
       <select id="function-selector" name="functions[name]">
         <option value="select">select</option>
       <% @allowed_functions.each do |af| %>
