--- a/app/views/crunch_algorithms/edit_functions.html.erb
+++ b/app/views/crunch_algorithms/edit_functions.html.erb
@@ -18,7 +18,7 @@
   <h4>Functions</h4>
 
   <div id="functions" class="field" data-crunch-alg-id=<%=@crunch_algorithm.id%>>
-      <select id="function-selector" name="functions[name]">
+      <select id="function-selector">
         <option value="select">select</option>
       <% @allowed_functions.each do |af| %>
         <option value="<%=af%>"><%=af%></option>
