--- a/app/views/crunch_algorithms/index.html.erb
+++ b/app/views/crunch_algorithms/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Functions</th>
-      <th>Category</th>
+      <th>Data Source</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,7 +20,7 @@
             <%= i+1 %>) <%= f[:name].to_s.gsub('_',' ').titleize  %> <br>
           <% end %>
         </td>
-        <td><%= crunch_algorithm.category %></td>
+        <td><%= crunch_algorithm.data_source.name if crunch_algorithm.data_source %></td>
         <td><%= link_to 'View', crunch_algorithm %></td>
         <td><%= link_to 'Edit', edit_crunch_algorithm_path(crunch_algorithm) %></td>
         <td><%= link_to 'Delete', crunch_algorithm, method: :delete, data: { confirm: 'Are you sure?' } %></td>
