--- a/app/views/crunch_algorithms/show.html.erb
+++ b/app/views/crunch_algorithms/show.html.erb
@@ -3,11 +3,9 @@
 <h1><%= @crunch_algorithm.name %></h1>
 
 <p>
-  <strong>Type:</strong>
-    <%= @crunch_algorithm.category %>
+  <strong>Data Source:</strong>
+    <%= @crunch_algorithm.data_source.name if @crunch_algorithm.data_source %>
 </p>
-
-
 
 <p>
   <strong>Functions:</strong>
