--- a/app/views/reports/crunch.html.erb
+++ b/app/views/reports/crunch.html.erb
@@ -4,7 +4,7 @@
 
 <table class="table table-striped">
 	<tr>
-	<% if @report.report_preview_rows	%>
+	<% unless @report.report_preview_rows.blank?	%>
 		<% @report.report_preview_rows[0].each do |k,v| %>
 			<th><%=k.to_s%></th>
 		<%end%>
