--- a/app/views/crunch_algorithms/_form.html.erb
+++ b/app/views/crunch_algorithms/_form.html.erb
@@ -24,7 +24,7 @@
     <p>
       <div style="margin-left: 2em">
         <% @crunch_algorithm.functions.each do |f| %>
-          <b><%= f[:name] %></b> ( <%= [f[:args]].flatten.join(', ') %> )<br>
+          <b><%= f["name"] %></b> ( <%= [f["args"]].flatten.join(', ') %> )<br>
         <% end %>
       </div>
   </p>
