--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Adnalysis</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
+  <script src="/javascripts/controllers/edit_functions_controller.js"></script>
   <%= csrf_meta_tags %>
 
 </head>
