--- a/app/views/crunch_algorithms/edit_functions.html.erb
+++ b/app/views/crunch_algorithms/edit_functions.html.erb
@@ -21,9 +21,28 @@
   <h4>Functions</h4>
 
   <div ng-app="functionsEditor">
-    <div ng-controller="functionsEditorController">
-      <div ng-repeat="func in functions">
-        {{func.name}} : {{func.args}}
+    <div class="function-row">
+      <div ng-controller="functionsEditorController">
+        <div ng-repeat="func in functions" class="function-row">
+          <span style="weight:800; color:red; cursor: pointer; cursor: hand" class='glyphicon glyphicon-remove' ng-click="deleteFunction($index)" aria-hidden="true"></span>
+            {{$index+1}}) <span ng-show="!isEditingFunction($index)">{{func.name}} : {{func.args}}</span>
+            <span ng-show="isEditingFunction($index)">
+              <select >
+                <option value="">Select</option>
+                <option value="">Name1</option>
+                <option value="">Name2</option>
+                <option value="">Name3</option>
+              </select>
+              <select ng-model="editing" ng-change="updateEditing(name)" ng-options="name for name in functionNames">
+              </select>
+            </span>
+          <span style="weight:800; color:green; cursor: pointer; cursor: hand" class='glyphicon glyphicon-ok' ng-click="commitFunction()" aria-hidden="true"></span>
+
+          
+          <br><br>
+        </div>
+        <span style="weight:800; color:green; cursor: pointer; cursor: hand" class='glyphicon glyphicon-plus' ng-click="addFunction($index)" aria-hidden="true"></span> <br><br> 
+        <button ng-click="updateFunctions()">Update Functions</button>
       </div>
     </div>
   </div>
